--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class = "top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud image">
       <h1>I'm Fadi Zaqout</h1>
-      <h2>Web developer, Software Engineer and Video Editor</h2>
+      <h2>Web developer, and Blockchain developer</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud image">
       <!-- <img src="images/mountain.png" alt="mountain image"> -->
     </div>
@@ -24,7 +24,7 @@
       <div class="profile">
         <img class="profile-pic" src="images/fadezak100.png" alt="fadezak100">
         <h2>Fadi H. Zaqout</h2>
-        <p class="intro">I'm a 22-year-old software engineering student. Passionate about blockchain, and web development. I have a good technical background in software engineering practices and methodologies, front-end web development, and smart contracts coding. </p>
+        <p class="intro">I'm a 22-year-old web enthusiast. Passionate about blockchain, and web development. I have a good technical background in software engineering practices and methodologies, front-end web development, and smart contracts coding. </p>
       </div>
 
       <hr>
@@ -59,10 +59,10 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.github.io/fadezak100">GitHub</a>
+      <a class="footer-link" href="https://github.com/fadezak100/">GitHub</a>
       <a class="footer-link" href="https://www.codewars.com/users/fadezak100">CodeWars</a>
       <a class="footer-link" href="https://freecodecamp.org/fadezak100">FreeCode Camp</a>
-      <a class="footer-link" href="https://www.github.io/fadezak100/HTMLCSSProject">Website Repo</a>
+      <a class="footer-link" href="https://github.com/fadezak100/HTMLCSSProject">Website Repo</a>
       <p class="copyright">© 2022 Fadi H. Zaqout.</p>
     </div>
 
